--- a/subsystems.html
+++ b/subsystems.html
@@ -50,12 +50,12 @@
         </section>
 
 <div>
-    <div><h1 class="subteamt">Click on the images to learn more !</h1></div>
+    <!--<div><h1 class="subteamt">Click on the images to learn more !</h1></div>-->
     <section class = "sec-01">
         <div class="subcontainer">
             <div class="subcontent">
                 <div class="subimages" href="javascript:void(0);" onclick="toggleMechCard()">
-                     <img src = "./images/Mechanical/mech1.png">
+                     <img src = "./images/Mechanical/mechanical progress.png">
                 </div>
                 <div class = "subtext-box">
                     <h3>Mechanical</h3>
@@ -70,24 +70,26 @@
 
             <div class="subcontent">
                 <div class="subimages">
-                     <img src = "./images/Electrical/schematics2.png">
+                     <img src = "./images/Electrical/Elec-image.png">
                 </div>
                 <div class = "subtext-box">
                     <h3>Electrical</h3>
-                    <p>Yellow Jack lateen sail grog draft no prey, no pay squiffy hail-shot Sink me chandler lanyard. Hail-shot loaded to the gunwalls barkadeer landlubber or just lubber Blimey bilge ballast yard cutlass trysail. Sheet Jack Tar Sea Legs lanyard starboard pink Gold Road scuttle long boat doubloon.
-                        Weigh anchor pink Admiral of the Black Barbary Coast draught rum gangway rutters doubloon lugger. Prow Letter of Marque starboard long clothes crow's nest barkadeer lee Arr aft heave to. Lanyard Sink me lugsail squiffy topmast scourge of the seven seas mutiny jib jolly boat tack.
+                    <p>On the WE Mars electrical team, we have the responsibility of creating all the hardware that will be on the rover. We pride ourselves on making everything from scratch, such as our own power distribution, Gyroscopes, GPS, Motor Controls and other electrical systems.
+
+                        Key skills learned on our team are PCB design with Altium Designer, embedded systems design, circuit protection, and communication. The electrical team provides power for the mechanical team's arm and motors, as well as the software team's equipment, This means communication is critical.
+
+                        This year, our big focus is on optimizing our power distribution system and creating an initial design of motor controls!
                         </p>
                 </div>
             </div>
 
             <div class="subcontent">
                 <div class="subimages">
-                     <img src = "./images/Software/image.jpg">
+                     <img src = "./images/Software/coding-background.jpg">
                 </div>
                 <div class = "subtext-box">
                     <h3>Software</h3>
-                    <p>Yellow Jack lateen sail grog draft no prey, no pay squiffy hail-shot Sink me chandler lanyard. Hail-shot loaded to the gunwalls barkadeer landlubber or just lubber Blimey bilge ballast yard cutlass trysail. Sheet Jack Tar Sea Legs lanyard starboard pink Gold Road scuttle long boat doubloon.
-                        Weigh anchor pink Admiral of the Black Barbary Coast draught rum gangway rutters doubloon lugger. Prow Letter of Marque starboard long clothes crow's nest barkadeer lee Arr aft heave to. Lanyard Sink me lugsail squiffy topmast scourge of the seven seas mutiny jib jolly boat tack.
+                    <p>The WE Mars software team has the responsibility of getting the rovers motor controls, sensors, canBUS and communications working. We are currently focusing on getting our sensors, such as liDAR, Cameras, IMU, GPS, etc. completely operational via ROS2. Using our previous rover as a playground, on it we plan to test the functionality of our systems, this is to ensure that by the time our new rover is completed we can easily integrate our systems to it with minor changes. We are hoping to begin exciting projects like autonomous navigation and computer vision for our rover by the start of summer. 
                         </p>
                 </div>
             </div>
@@ -99,8 +101,7 @@
                 </div>
                 <div class = "subtext-box">
                     <h3>Business</h3>
-                    <p>Yellow Jack lateen sail grog draft no prey, no pay squiffy hail-shot Sink me chandler lanyard. Hail-shot loaded to the gunwalls barkadeer landlubber or just lubber Blimey bilge ballast yard cutlass trysail. Sheet Jack Tar Sea Legs lanyard starboard pink Gold Road scuttle long boat doubloon.
-                        Weigh anchor pink Admiral of the Black Barbary Coast draught rum gangway rutters doubloon lugger. Prow Letter of Marque starboard long clothes crow's nest barkadeer lee Arr aft heave to. Lanyard Sink me lugsail squiffy topmast scourge of the seven seas mutiny jib jolly boat tack.
+                    <p>The WE Mars business team holds the responsibility of properly securing and managing all funds, handling purchases, and tracking financials of the club. We are currently trying to get our team some well deserved sponsors to help cut our costs, especially with us creating a brand new rover. We also manage creation of team apparel, and hold social events to help our team members bond!
                         </p>
                 </div>
             </div>
@@ -108,12 +109,11 @@
 
             <div class="subcontent">
                 <div class="subimages">
-                     <img src = "./images/Science/sci-sub-photo.png">
+                     <img src = "./images/Science/sci-photo.jfif">
                 </div>
                 <div class = "subtext-box">
                     <h3>Science</h3>
-                    <p>Yellow Jack lateen sail grog draft no prey, no pay squiffy hail-shot Sink me chandler lanyard. Hail-shot loaded to the gunwalls barkadeer landlubber or just lubber Blimey bilge ballast yard cutlass trysail. Sheet Jack Tar Sea Legs lanyard starboard pink Gold Road scuttle long boat doubloon.
-                        Weigh anchor pink Admiral of the Black Barbary Coast draught rum gangway rutters doubloon lugger. Prow Letter of Marque starboard long clothes crow's nest barkadeer lee Arr aft heave to. Lanyard Sink me lugsail squiffy topmast scourge of the seven seas mutiny jib jolly boat tack.
+                    <p>The WE Mars science team is solely responsible in creating the devices to collect and anyalize dirt samples, this involves creating devices to hold the dirt and also procedures for testing the contents of it. We are currently trying to create a device that collects dirt and is also interchangable with the arm, this provides our team with a flexible yet effective design.
                         </p>
                 </div>
             </div>
