--- a/subsystems.html
+++ b/subsystems.html
@@ -55,7 +55,7 @@
         <div class="subcontainer">
             <div class="subcontent">
                 <div class="subimages" href="javascript:void(0);" onclick="toggleMechCard()">
-                     <img src = "./images/Mechanical/mechanical progress.png">
+                     <img src = "./images/Mechanical/mechanical-progress.PNG">
                 </div>
                 <div class = "subtext-box">
                     <h3>Mechanical</h3>
