Updated About Page

--- a/about.html
+++ b/about.html
@@ -60,6 +60,18 @@
         <div class="profile">
             <div class="person">
                 <div class="person__container">
+                    <img class="person__circle" src="images/aboutpage/DD-Abstract-Background-11232-Preview.jpg">
+                    <img class="person__img" id="founder" src="images/aboutpage/eugeune-removebg-preview.png"
+                        alt="Profile photo">
+                </div>
+            </div>
+            <h1>Eugene Porter</h1>
+            <h4>Founder</h4>
+        </div>
+
+        <div class="profile">
+            <div class="person">
+                <div class="person__container">
                     <img class="person__circle" src="images/aboutpage/projleadbg2.jpg">
                     <img class="person__img" id="projlead2" src="images/aboutpage/dev_headshot-removebg-preview.png"
                         alt="Profile photo">
@@ -84,6 +96,23 @@
         <div class="profile">
             <div class="person">
                 <div class="person__container">
+                    <img class="person__circle" src="images/aboutpage/abstract-modern-line-gradient-background-vector.jpg">
+                    <img class="person__img" id="vp" src="images/aboutpage/SoftLead-removebg-preview.png"
+                        alt="Profile photo">
+                </div>
+            </div>
+            <h1>Abeer Muhammad</h1>
+            <h4>Vice-President</h4>
+        </div>
+    </div>
+
+    <div class="row">
+
+
+        
+        <div class="profile">
+            <div class="person">
+                <div class="person__container">
                     <img class="person__circle" src="images/aboutpage/elecleadbg.jpg">
                     <img class="person__img" id="mechlead" style="bottom: -35;"
                         src="images/aboutpage/Chris-photo-removebg-preview.png" alt="Profile photo">
@@ -103,9 +132,7 @@
             <h1>Hiring</h1>
             <h4>Mechanical Lead</h4>
         </div>
-    </div>
 
-    <div class="row">
         <div class="profile">
             <div class="person">
                 <div class="person__container">
@@ -151,10 +178,47 @@
             <h1>Hiring</h1>
             <h4>Electrical Lead</h4>
         </div>
+
+        <div class="profile">
+            <div class="person">
+                <div class="person__container">
+                    <img class="person__circle" src="images/aboutpage/mechbg.jpg">
+                    <img class="person__img" id="buislead" src="images/aboutpage/Armaan.png"
+                        alt="Profile photo">
+                </div>
+            </div>
+            <h1>Armaan Jassal</h1>
+            <h4>Business Lead</h4>
+        </div>
+
+         
+        <div class="profile">
+            <div class="person">
+                <div class="person__container">
+                    <img class="person__circle" src="images/aboutpage/mechbg2.jpg">
+                    <img class="person__img" id="buislead2" src="images/aboutpage/Empty-Profile-Picture.png"
+                        alt="Profile photo">
+                </div>
+            </div>
+            <h1>Hiring</h1>
+            <h4>Business Lead</h4>
+        </div>
+
+
     </div>
 
 
     <div class="row">
+
+        <div class="profile" id="filler">
+            <div class="person">
+                <div class="person__container">
+                    <img class="person__circle" src="images/aboutpage/R.jpg">
+                </div>
+            </div>
+        </div>
+
+
         <div class="profile">
             <div class="person">
                 <div class="person__container">
@@ -179,32 +243,18 @@
             <h4>Science Lead</h4>
         </div>
 
-        <div class="profile">
+        <div class="profile" id="filler">
             <div class="person">
                 <div class="person__container">
-                    <img class="person__circle" src="images/aboutpage/mechbg.jpg">
-                    <img class="person__img" id="buislead" src="images/aboutpage/Armaan.png"
-                        alt="Profile photo">
+                    <img class="person__circle" src="images/aboutpage/R.jpg">
                 </div>
             </div>
-            <h1>Armaan Jassal</h1>
-            <h4>Business Lead</h4>
         </div>
 
-        <div class="profile">
-            <div class="person">
-                <div class="person__container">
-                    <img class="person__circle" src="images/aboutpage/mechbg2.jpg">
-                    <img class="person__img" id="buislead2" src="images/aboutpage/Empty-Profile-Picture.png"
-                        alt="Profile photo">
-                </div>
-            </div>
-            <h1>Hiring</h1>
-            <h4>Business Lead</h4>
-        </div>
+
     </div>
 
-    <section class="teamfooter">
+    <section class="footer">
         <h2>WE Mars Team</h2>
         <h3>1151 Richmond St<br>London, ON N6A 3K7</h3>
         <a href="sponsor.html" class="hero-btn" id="contact-btn">CONTACT US</a>
