--- a/about.html
+++ b/about.html
@@ -155,6 +155,11 @@
             <h4>Software Lead</h4>
         </div>
 
+
+    </div>
+
+    <div class="row">
+
         <div class="profile">
             <div class="person">
                 <div class="person__container">
