Fixed Sponsor Package
title

--- a/sponsor.html
+++ b/sponsor.html
@@ -37,6 +37,8 @@
             </div>
         </nav>
 
+        <h1>Sponsor Information</h1>
+
         <nav class="m-nav">
 
             <div class="responsive-nav">
@@ -54,11 +56,27 @@
 
     </section>
 
+
+
+
+    <div>
+        <h1 class="section-header">Our Sponsors!</h1>
+    </div>
+
+    <div class="sponsor-section">
+        <img class="xp" src="images/xppower.jpg"></img>
+        <img class="proto" src="images/ProtoMFG.jpg"></img>
+    </div>
+
     <div>
         <h1 class="section-header">Sponsorship Package</h1>
         <div class="sponsorship-package-div">
-            <embed src="images/WEMARS_Sponsorship_Package.pdf" width="700" height="800" type="application/pdf">
+            <embed src="images\Sponsorship Package 20242025 (1) (1).pdf" width="900" height="800" type="application/pdf">
         </div>
+    </div>
+
+    <div class="download-div">
+        <a class="download-button" href="images\Sponsorship Package 20242025 (1) (1).pdf" download>Download Sponsor Package</a>
     </div>
 
     <section id="contact">
