New home screen!
Super Awesome Stuff

--- a/about.html
+++ b/about.html
@@ -54,20 +54,8 @@
     </section>
 
 
-
     <div class="row">
 
-        <div class="profile">
-            <div class="person">
-                <div class="person__container">
-                    <img class="person__circle" src="images/aboutpage/DD-Abstract-Background-11232-Preview.jpg">
-                    <img class="person__img" id="founder" src="images/aboutpage/eugeune-removebg-preview.png"
-                        alt="Profile photo">
-                </div>
-            </div>
-            <h1>Eugene Porter</h1>
-            <h4>Founder</h4>
-        </div>
 
         <div class="profile">
             <div class="person">
@@ -96,26 +84,9 @@
         <div class="profile">
             <div class="person">
                 <div class="person__container">
-                    <img class="person__circle" src="images/aboutpage/abstract-modern-line-gradient-background-vector.jpg">
-                    <img class="person__img" id="vp" src="images/aboutpage/SoftLead-removebg-preview.png"
-                        alt="Profile photo">
-                </div>
-            </div>
-            <h1>Abeer Muhammad</h1>
-            <h4>Vice-President</h4>
-        </div>
-    </div>
-
-    <div class="row">
-
-
-        
-        <div class="profile">
-            <div class="person">
-                <div class="person__container">
                     <img class="person__circle" src="images/aboutpage/elecleadbg.jpg">
                     <img class="person__img" id="mechlead" style="bottom: -35;"
-                        src="images/aboutpage/Chris-photo-removebg-preview.png" alt="Profile photo">
+                        src="images/aboutpage/Chris_Headshot-removebg-preview.png" alt="Profile photo">
                 </div>
             </div>
             <h1>Chris Latosinsky</h1>
@@ -126,12 +97,19 @@
             <div class="person">
                 <div class="person__container">
                     <img class="person__circle" src="images/aboutpage/elec2bg.jpg">
-                    <img class="person__img" id="mechlead2" src="images/aboutpage/Empty-Profile-Picture.png" alt="Profile photo">
+                    <img class="person__img" id="mechlead2" src="images/aboutpage/Shayla_Headshot-removebg-preview.png" alt="Profile photo">
                 </div>
             </div>
-            <h1>Hiring</h1>
+            <h1>Shayla Diep</h1>
             <h4>Mechanical Lead</h4>
         </div>
+
+
+    </div>
+
+    <div class="row">
+
+
 
         <div class="profile">
             <div class="person">
@@ -148,17 +126,12 @@
             <div class="person">
                 <div class="person__container">
                     <img class="person__circle" src="images/aboutpage/software2bg.jpg">
-                    <img class="person__img" id="softlead2" src="images/aboutpage/Empty-Profile-Picture.png" alt="Profile photo">
+                    <img class="person__img" id="softlead2" src="images/aboutpage/Adam_Headshot-removebg-preview.png" alt="Profile photo">
                 </div>
             </div>
-            <h1>Hiring</h1>
+            <h1>Adam Dunn</h1>
             <h4>Software Lead</h4>
         </div>
-
-
-    </div>
-
-    <div class="row">
 
         <div class="profile">
             <div class="person">
@@ -176,13 +149,19 @@
             <div class="person">
                 <div class="person__container">
                     <img class="person__circle" src="images/aboutpage/buisleadbg2.jpg">
-                    <img class="person__img" id="eleclead2" src="images/aboutpage/Empty-Profile-Picture.png"
+                    <img class="person__img" id="eleclead2" src="images/aboutpage/Jonny-removebg-preview.png"
                         alt="Profile photo">
                 </div>
             </div>
-            <h1>Hiring</h1>
+            <h1>Jonny</h1>
             <h4>Electrical Lead</h4>
         </div>
+
+
+    </div>
+
+    <div class="row">
+
 
         <div class="profile">
             <div class="person">
@@ -201,29 +180,14 @@
             <div class="person">
                 <div class="person__container">
                     <img class="person__circle" src="images/aboutpage/mechbg2.jpg">
-                    <img class="person__img" id="buislead2" src="images/aboutpage/Empty-Profile-Picture.png"
+                    <img class="person__img" id="buislead2" src="images/aboutpage/Nathan-removebg-preview.png"
                         alt="Profile photo">
                 </div>
             </div>
-            <h1>Hiring</h1>
+            <h1>Nathan Eng</h1>
             <h4>Business Lead</h4>
         </div>
-
-
-    </div>
-
-
-    <div class="row">
-
-        <div class="profile" id="filler">
-            <div class="person">
-                <div class="person__container">
-                    <img class="person__circle" src="images/aboutpage/R.jpg">
-                </div>
-            </div>
-        </div>
-
-
+   
         <div class="profile">
             <div class="person">
                 <div class="person__container">
@@ -232,7 +196,7 @@
                         src="images/aboutpage/ScienceLead-removebg-preview.png" alt="Profile photo">
                 </div>
             </div>
-            <h1>Hiring</h1>
+            <h1>Lindsay Reymer</h1>
             <h4>Science Lead</h4>
         </div>
 
@@ -240,13 +204,38 @@
             <div class="person">
                 <div class="person__container">
                     <img class="person__circle" src="images/aboutpage/scileadbg.webp">
-                    <img class="person__img" id="scilead" src="images/aboutpage/Empty-Profile-Picture.png"
+                    <img class="person__img" id="scilead" src="images/aboutpage/Mitch_Headshot-removebg-preview.png"
                         alt="Profile photo">
                 </div>
             </div>
-            <h1>Hiring</h1>
+            <h1>Mitch Strasman</h1>
             <h4>Science Lead</h4>
         </div>
+
+    </div>
+
+
+    <div class="row">
+
+        <div class="profile">
+            <div class="person">
+                <div class="person__container">
+                    <img class="person__circle" src="images/aboutpage/DD-Abstract-Background-11232-Preview.jpg">
+                    <img class="person__img" id="founder" src="images/aboutpage/eugeune-removebg-preview.png"
+                        alt="Profile photo">
+                </div>
+            </div>
+            <h1>Eugen Porter</h1>
+            <h4>Founder</h4>
+        </div>
+
+    </div>
+
+
+
+
+
+    <!--<div class="row">
 
         <div class="profile" id="filler">
             <div class="person">
@@ -257,7 +246,14 @@
         </div>
 
 
-    </div>
+        <div class="profile" id="filler">
+            <div class="person">
+                <div class="person__container">
+                    <img class="person__circle" src="images/aboutpage/R.jpg">
+                </div>
+            </div>
+        </div>
+    </div>-->
 
     <section class="footer">
         <h2>WE Mars Team</h2>
