--- a/about.html
+++ b/about.html
@@ -153,7 +153,7 @@
                         alt="Profile photo">
                 </div>
             </div>
-            <h1>Jonny</h1>
+            <h1>Jonathan Hui</h1>
             <h4>Electrical Lead</h4>
         </div>
 
