--- a/sponsor.html
+++ b/sponsor.html
@@ -66,6 +66,7 @@
     <div class="sponsor-section">
         <img class="xp" src="images/xppower.jpg"></img>
         <img class="proto" src="images/ProtoMFG.jpg"></img>
+        <img class="usc" src="images/USC-Logo.png"></img>
     </div>
 
     <div>
