Update Mechanical Subsytems Page

--- a/subsystems.html
+++ b/subsystems.html
@@ -135,14 +135,17 @@
         <h2>Mechanical Subsystem</h2>
         <div class="m-card-body">
             <div class="m-card-text">
-                <p>This is a brief description of the mechanical subsystem, outlining the main components and their functions. You can add more details here about the design, materials, and purpose of each part.</p>
+                <p>Here are some images of the 2023/2024 rover. With only 8 memebers and 4 months to redesign and build the, chassis, differential bar, and arm, our team stopped at no cost to get it done. CIRC proved to be a real test of teamwork and clever (last-minute) engineering challenges. 
+                    Given our small budget, our team had to design and build everything from scratch, using the cheapest materials possible. This meant that we had to be creative with our designs, and we had to be resourceful with our materials.
+                </p>
             </div>
             <div class="m-card-images">
+                <img src="./images/Mechanical/mech3.png" alt="Mechanical Details">
                 <img src="./images/Mechanical/mech1.png" alt="Mechanical Subsystem">
-                <img src="./images/Mechanical/mech1.png" alt="Mechanical Details">
+                <img src="./images/Mechanical/mech2.png" alt="Mechanical Details">
             </div>
             <div class="m-card-text">
-                <p>Additional text can be placed here, providing more context or details about the subsystem. You might also include specifications, challenges, or future work here.</p>
+                <p>In the 2024/2025 season, our team grew to 70 members, allowing us to work on more complicated designs at a faster pace. Our goal remains the same from last year; to design the smallest and lightest rover competing at CIRC. As of March we have completed 90% of our final design and are on track to complete manufacturing from may-aug.</p>
             </div>
         </div>
     </div>
